# cookiecutter-python-uv

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml  taskfile.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  ci.yml  release_to_gh.yml
hooks/: post_gen_project.py
tests/: test_generate_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  taskfile.yml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.github/: copilot-instructions.md
{{cookiecutter.project_slug}}/.github/instructions/: python.instructions.md
{{cookiecutter.project_slug}}/.github/prompts/: implement.md  implement.prompt.md  just_do_it.prompt.md  plan.md  plan.prompt.md  reflect.md  reflect.prompt.md  understand.md  understand.prompt.md
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  release.yml  release_to_gh.yml  release_to_pypi.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: version.py
