[project]
name = "cookiecutter-uv"
version = "0.2.0"
description = "Cookiecutter template for Python using uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.3.4",
    "ty>=0.0.1a7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "D", "I", "PT"]
ignore = ["D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["S101", "D100", "D103"]

[tool.ty.rules]
unresolved-import = "ignore"
