[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "{{cookiecutter.package_name}}"}
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.25.0"
black = "^23.7.0"
ruff = "^0.0.282"
nbqa = "^1.7.0"
nbconvert = "^7.7.3"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
