[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "{{cookiecutter.package_name}}"}
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.282"
pytest = "^7.4.0"
ipykernel = "^6.25.0"
nbconvert = "^7.7.3"
pre-commit = "^3.7.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["D104"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
